# d-leafbr-llm

./: .gitignore  .tree.sh  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  old.docker-compose.yml  pyproject.toml  requirements.txt  requirements_anaconda.txt  setup_env.sh
.devcontainer/: devcontainer.json
.jupyter/: jupyter_server_config.json  jupyter_server_config.py  migrated
.jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace
d_leafbr_llm/: __init__.py  dataset.py  features.py  plots.py
d_leafbr_llm/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
huggingface/: token
leafbr/: __init__.py  config.py
leafbr/datasets/: __init__.py  config.py  extract.py  scraper.py  utils.py
leafbr/datasets/anvisa/: __init__.py  config.py  load.py  pre.py  process.py  scraper.py  utils.py
leafbr/llm/training/: __init__.py
leafbr_llm/: __init__.py  config.py  dataset.py  features.py  plots.py
leafbr_llm/datasets/anvisa/: __init__.py  config.py  scraper.py  utils.py
leafbr_llm/modeling/: predict.py  train.py
notebooks/: 01_analise_descritiva.ipynb  teste.ipynb
