[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "d_leafbr_llm"
version = "0.0.1"
description = "D-LeafBR-LLM is a research project focused on fine-tuning Large Language Models (LLMs) using drug package inserts (leaflets) from Brazilian medications. The primary goal is to create a structured corpus, called D-LeafBR, composed of official Brazilian drug leaflets, and to use this dataset to fine-tune and evaluate LLMs. The project explores the potential of these models to improve the comprehension of medical information by the general population."
authors = [
  { name = "Vin\u00edcius de Lima Gon\u00e7alves" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["d_leafbr_llm"]
force_sort_within_sections = true
